fix: mobile navbar wrap

--- a/assets/styles/base.scss
+++ b/assets/styles/base.scss
@@ -5,6 +5,7 @@ body {
 
 p {
   text-align: justify;
+  word-spacing: -2px;
 }
 
 aside, section {
